Meir javaslang, pluss prøver å fjerne class og iml